--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,87 +1,80 @@
 <!DOCTYPE HTML>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
 
-      http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-    KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
 
-    <head>
-        <link rel="stylesheet" type="text/css" href="guacamole.css"/>
-        <title>Guacamole (EXAMPLE)</title>
-    </head>
+<head>
+<link rel="stylesheet" type="text/css" href="vnc.css" />
+<title>HCAP Test browser</title>
+</head>
 
-    <body>
+<body
+	style="width: 100%; height: 100%; position: absolute; overflow: hidden">
+	
+	<div id="jobdetail" >
+		<p id="detailstring" > </p>
+	</div>
 
-        <!-- Display -->
-        <div id="display"></div>
+	<div id="display"></div>
+	<script type="text/javascript"
+		src="/test-service/guacamole-common-js/all.min.js"></script>
 
-        <!-- Guacamole JavaScript API -->
-        <script type="text/javascript"
-            src="guacamole-common-js/all.min.js"></script>
+	<script type="text/javascript">
+		var display = document.getElementById("display");
 
-        <!-- Init -->
-        <script type="text/javascript"> /* <![CDATA[ */
+		// Instantiate client, using an HTTP tunnel for communications.
+		var guac = new Guacamole.Client(new Guacamole.HTTPTunnel(
+				"tunnel"));
 
-            // Get display div from document
-            var display = document.getElementById("display");
+		// Add client to display div
+		display.appendChild(guac.getDisplay().getElement());
 
-            // Instantiate client, using an HTTP tunnel for communications.
-            var guac = new Guacamole.Client(
-                new Guacamole.HTTPTunnel("tunnel")
-            );
+		// Error handler
+		guac.onerror = function(error) {
+			location.reload();
+		};
+		
+		var url = window.location.href;
+		var query_string = url.split("?");
+		
+		var job_name = query_string[1].split("&")[1].split("=")[1];
+		var browser = query_string[1].split("&")[2].split("=")[1];
+		var browser_version = query_string[1].split("&")[3].split("=")[1];
+		
+		document.getElementById("detailstring").innerHTML = "Job Name : " + job_name + " , Browser : " + browser + " , Version : " + browser_version;
+		try {
+			var connect_string = query_string[1] + "&width=" + 900 + "&height="
+					+ 500;
 
-            // Add client to display div
-            display.appendChild(guac.getDisplay().getElement());
-            
-            // Error handler
-            guac.onerror = function(error) {
-                alert(error);
-            };
+			guac.connect(connect_string);
+		} catch (e) {
+			window.refresh();
+		}
 
-            // Connect
-            guac.connect();
+		// Disconnect on close
+		window.onunload = function() {
+			guac.disconnect();
+		}
 
-            // Disconnect on close
-            window.onunload = function() {
-                guac.disconnect();
-            }
+		// Mouse
+		/*	var mouse = new Guacamole.Mouse(guac.getDisplay().getElement());
 
-            // Mouse
-            var mouse = new Guacamole.Mouse(guac.getDisplay().getElement());
+			mouse.onmousedown = mouse.onmouseup = mouse.onmousemove = function(
+					mouseState) {
+				guac.sendMouseState(mouseState);
+			};
+		 */
+		// Keyboard
+		var keyboard = new Guacamole.Keyboard(document);
 
-            mouse.onmousedown = 
-            mouse.onmouseup   =
-            mouse.onmousemove = function(mouseState) {
-                guac.sendMouseState(mouseState);
-            };
+		keyboard.onkeydown = function(keysym) {
+			guac.sendKeyEvent(1, keysym);
+		};
 
-            // Keyboard
-            var keyboard = new Guacamole.Keyboard(document);
+		keyboard.onkeyup = function(keysym) {
+			guac.sendKeyEvent(0, keysym);
+		};
+	</script>
 
-            keyboard.onkeydown = function (keysym) {
-                guac.sendKeyEvent(1, keysym);
-            };
-
-            keyboard.onkeyup = function (keysym) {
-                guac.sendKeyEvent(0, keysym);
-            };
-
-        /* ]]> */ </script>
-
-    </body>
+</body>
 
 </html>
